tests: Fix checkstyle warnings
Fix checkstyle warnings for tests.

(cherry picked from commit 4d15525b3560a4754d725069dad1c43813ffbdd5)